Fixes the bug causing distribution misalignment of sign tagging options

--- a/src/app/components/locate-signs-in-image-dialog/locate-signs-in-image-dialog.component.css
+++ b/src/app/components/locate-signs-in-image-dialog/locate-signs-in-image-dialog.component.css
@@ -48,7 +48,11 @@ app-image-annotator {
 	}
 
 	.modal-fullscreen .modal-content {
-		height: unset;
+		height: 100%;
+	}
+
+	.modal-dialog {
+		height: inherit;
 	}
 }
 
@@ -105,6 +109,10 @@ app-image-annotator {
 	position: relative;
 	padding: 0 .5rem 0 .5rem;
 	cursor: default;
+}
+
+.control-options span label {
+	padding-right: .2rem;
 }
 
 .control-options span i {
